--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -102,6 +102,54 @@
       </li>
     </ul>
 
+    <ul>
+      <li><a href="https://github.com/accesslint/access_lint">access_line</a>:
+        <q cite="https://github.com/accesslint/access_lint">Check for web accessibility errors from Ruby</q>.
+        Available under the <abbr>MIT</abbr> licence. 
+        Uses the <a href="https://github.com/GoogleChrome/accessibility-developer-tools/wiki/Audit-Rules">Audit
+        Rules</a> defined for the Google Chrome accessibility developer tools.
+        See also the other checkers by the organisation
+        &ldquo;<a href="https://github.com/accesslint">accesslint</a>&rdquo;.
+      </li>
+      <li>Peter Kranz: 
+        <a href="http://www.peterkrantz.com/raakt/wiki/"><abbr>Raakt</abbr> - 
+        The Ruby Accessibility Analysis Kit</a>.
+        Source code available on <a href="http://raakt.rubyforge.org/svn/trunk/">Rubyforge.org</a>
+        under the <a href="http://raakt.rubyforge.org/svn/trunk/LICENSE"><abbr>BSD</abbr>
+        3-clause licence</a>.
+      </li>
+      <li>Squiz Labs:
+        <a href="https://github.com/squizlabs/HTML_CodeSniffer">HTML_CodeSniffer</a>:
+        <q cite="https://github.com/squizlabs/HTML_CodeSniffer">HTML_CodeSniffer 
+        is a client-side JavaScript application that checks a <abbr>HTML</abbr> document 
+        or source code, and detects violations of a defined coding standard. 
+        Comes with standards that cover the three conformance levels of the 
+        <abbr>W3C</abbr>'s Web Content Accessibility Guidelines (<abbr>WCAG</abbr>) 2.0 
+        and the <abbr>U.S.</abbr> Section 508 legislation.</q>
+        Licence: <a href="https://github.com/squizlabs/HTML_CodeSniffer/blob/master/licence.txt"
+        lang="en-US"><abbr>BSD</abbr> 3-Clause License</a>.
+      </li>
+      <li>Access-for-all:
+        <a href="https://github.com/Access4all/ContentAccessibilityChecker"><abbr>CAC</abbr> - 
+        The Content Accessibility Checker</a>: a Firefox plugin for checking
+        web content against the subset of <abbr>WCAG</abbr> 2.0 success criteria
+        that can be checked automatically.
+        Licence: Creative Commons CC BY 3.0 CH (which is 
+        <a href="https://wiki.creativecommons.org/wiki/Frequently_Asked_Questions#Can_I_apply_a_Creative_Commons_license_to_software.3F">not 
+        an appropriate licence for source code</a>!).
+      </li>
+      <li>Anil Suryanarayana:
+        <a href="https://github.com/neurites/seleniumAccessibility">seleniumAccessibility</a>:
+        <q cite="https://github.com/neurites/seleniumAccessibility#seleniumaccessibility">Selenium 
+        Webdriver driven accessibility testing module to check for webpage accessibility compliance</q>.
+        Licence: <a href="https://github.com/neurites/seleniumAccessibility/blob/master/LICENSE"
+        lang="en-US"><abbr>MIT</abbr>
+        License</a>.
+      </li>
+      <!--li><a href=""></a>
+      </li-->
+    </ul>
+
     <h3>Contrast Checkers</h3>
     <p>Whether foreground and background colous have sufficient contrast is not 
       something that you should try to &ldquo;eyeball&rdquo;. For example,
