CSS for header and footer
* #home h1 now has letter-spacing.
* #footer border modified; smaller em font.
* #header h1 now fully transparent again.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         in e-Learning</a>.
       </li>
       <li><a href="contentmanagement.html">Content 
-        Management Systems (<abbr>CMS</abbr>)</a>
+        Management Systems (<abbr>CMS</abbr>)</a>.
       </li>
     </ul>
 
@@ -60,7 +60,7 @@
       </li>
       <li>
         <a href="crowdsourcing.html">Accessibility, Crowdsourcing 
-        and Human-Based Computation</a>
+        and Human-Based Computation</a>.
       </li>
     </ul>
 
