typos and other minor edits

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -18,12 +18,13 @@
     <h2>General Linux Accessibility Resources</h2>
     <ul>
       <li>Sharon Snider: 
-        <strong><a href="http://www.tldp.org/HOWTO/Accessibility-Dev-HOWTO/">How to Develop Accessible Linux Applications</a></strong> (<abbr>IBM</abbr>, 2002).
+        <strong><a href="http://www.tldp.org/HOWTO/Accessibility-Dev-HOWTO/">How 
+        to Develop Accessible Linux Applications</a></strong> (<abbr>IBM</abbr>, 2002).
         Also available on <a href="http://www.faqs.org/docs/Linux-HOWTO/Accessibility-Dev-HOWTO.html">faqs.org</a>.
       </li>
       <li>The GNOME Project: <strong>
-        <a href="https://developer.gnome.org/accessibility-devel-guide/">GNOME Accessibility Developers Guide</a>
-        </strong>.
+        <a href="https://developer.gnome.org/accessibility-devel-guide/">GNOME 
+        Accessibility Developers Guide</a></strong>.
       </li>
       <li><span lang="fr">Samuel Thibault</span>: <a
         href="http://brl.thefreecat.org/wiki/LUG">Accessibility Tips: 
@@ -35,7 +36,8 @@
         href="http://brl.thefreecat.org/wiki/Installer">Accessibility Tips: Installer</a>: 
         about accessible installers.
       </li>
-      <li>Spencer Hunley: <a href="http://opensource.com/life/15/4/6-reasons-people-disabilities-should-use-linux">
+      <li>Spencer Hunley: 
+        <a href="http://opensource.com/life/15/4/6-reasons-people-disabilities-should-use-linux">
         6 reasons people with disabilities should use Linux</a>,
         Opensource.com, 20 April 2015.
       </li>
@@ -48,7 +50,8 @@
     <h2>Specific Linux Distributions and Desktop Environments</h2>
     <ul>
       <li><a href="http://mate-desktop.org/">MATE Desktop Environment</a>. 
-        <a href="https://en.wikipedia.org/wiki/MATE_%28software%29">MATE</a> 
+        <a href="https://en.wikipedia.org/wiki/MATE_%28software%29"
+        title="MATE on Wikipedia">MATE</a> 
         is a fork of the now unmaintained GNOME 2. 
         When the GNOME Project released GNOME 3, much of the accessibility work had to be redone.
         For this reason, many people with disabilities continued using GNOME 2 and,
@@ -85,7 +88,7 @@
         <a href="http://blog.handylinux.org/article190/handylinux-2-0-est-disponible-au-telechargement">
         16 May 2015</a>,
         is based on Debian 8, although it is only available as a 32-bit version. 
-        It uses <a href="http://www.xfce.org/">Xfce</a> a desktop environment
+        It uses <a href="http://www.xfce.org/">Xfce</a> as desktop environment
         and includes the <a href="https://wiki.gnome.org/Projects/Orca">Orca screen reader</a> 
         (which is part of GNOMEShell), a screen magnifier, an on-screen keyboard 
         and simplified menus.
@@ -113,7 +116,7 @@
         <a href="http://www.linux-speakup.org/distros.html">distributions</a>,
         but it seems that there have been no updates since 2010. 
       </li>
-      <li><a href="http://luwrain.org/">The accessible environment Luwrain</a>
+      <li><a href="http://luwrain.org/">The accessible environment Luwrain</a>:
         <q>Luwrain is a set of software components on Java for accessible
         user interface construction.</q>
         The 
