+ Accessibility Help for Computer Users

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -22,10 +22,6 @@
         to Develop Accessible Linux Applications</a></strong> (<abbr>IBM</abbr>, 2002).
         Also available on <a href="http://www.faqs.org/docs/Linux-HOWTO/Accessibility-Dev-HOWTO.html">faqs.org</a>.
       </li>
-      <li>The GNOME Project: <strong>
-        <a href="https://developer.gnome.org/accessibility-devel-guide/">GNOME 
-        Accessibility Developers Guide</a></strong>.
-      </li>
       <li><span lang="fr">Samuel Thibault</span>: <a
         href="http://brl.thefreecat.org/wiki/LUG">Accessibility Tips: 
           <abbr title="Linux User Group">LUG</abbr>
@@ -47,8 +43,15 @@
       </li>
     </ul>
 
-    <h2>Specific Linux Distributions and Desktop Environments</h2>
+    <h2>Desktop Environments</h2>
     <ul>
+      <li>The GNOME Project: <strong>
+        <a href="https://developer.gnome.org/accessibility-devel-guide/">GNOME 
+        Accessibility Developers Guide</a></strong>.
+        See also the
+        <a href="https://wiki.gnome.org/Accessibility/IntroATs">Introduction
+        to Assistive Technologies</a>.
+      </li>
       <li><a href="http://mate-desktop.org/">MATE Desktop Environment</a>. 
         <a href="https://en.wikipedia.org/wiki/MATE_%28software%29"
         title="MATE on Wikipedia">MATE</a> 
@@ -63,6 +66,22 @@
         Fedora also has a 
         <a href="https://spins.fedoraproject.org/mate-compiz/">MATE Compiz spin</a>.
       </li>
+    </ul>
+
+    <h3>Desktop Environments: Information and Tips for Computer Users</h3>
+    <ul>
+      <li>GNOME:
+        <a href="https://help.gnome.org/users/gnome-help/stable/a11y.html">Universal
+        Access</a>: guide to GNOME's accessibility features.
+      </li>
+      <li>KDE UserBase Wiki:
+        <a href="https://userbase.kde.org/Applications/Accessibility">Accessibility</a>:
+        guide to accessibility features and tools in KDE.
+      </li>
+    </ul>
+
+    <h2>Specialised Linux Distributions</h2>
+    <ul>
       <li><a href="http://sonargnulinux.com/">Sonar <abbr>GNU</abbr>/Linux</a>:
         a Linux distribution that focuses on assistive technologies.
       </li>
