--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -70,6 +70,51 @@
         JavaScript Accessibility Summit 2013.
     </ul>
 
+    <h2>Accessibility Help for Computer Users</h2>
+    <ul>
+      <li><abbr>BBC</abbr>: 
+        <a href="http://www.bbc.co.uk/accessibility/">My web my way - 
+        Making the web easier to use</a> (archived content; this site
+        is no longer being updated).
+      </li>
+      <li><abbr title="World Wide Web Consortium">W3C</abbr>:
+        <a href="http://www.w3.org/WAI/users/browsing" lang="en-US">Better
+        Web Browsing: Tips for Customizing Your Computer</a>
+        (last updated in May 2010).
+      </li>
+      <li><abbr>W3C</abbr>:
+        <a href="http://www.w3.org/WAI/users/inaccessible" lang="en-US">Contacting
+        Organizations about Inaccessible Websites</a>
+        (last updated in May 2010).
+      </li>
+      <li>Microsoft Accessibility:
+        <ul>
+          <li>
+            <a href="http://www.microsoft.com/enable/aging/tips.aspx">10
+            Tips for the Awkward Age of Computing</a>: tips for personalising
+            and customising your Windows <abbr>PC</abbr>.
+          </li>
+          <li>
+            <a href="http://www.microsoft.com/enable/guides/vision.aspx">Guide
+            for Individuals with Vision Impairments</a>.
+          </li>
+        </ul>
+      </li>
+      <li>Bill Holton (<abbr title="American Foundation for the Blind">AFB</abbr>):
+        <a href="http://www.afb.org/info/living-with-vision-loss/using-technology/using-a-computer/123">Using
+        a Computer with a Visual Impairment: A Beginner's Guide to Computer Accessibility</a>.
+      </li>
+      <li>Lasa Information Systems Team :
+        <a href="http://www.ictknowledgebase.org.uk/macaccessibility">Mac OS X 
+        Accessibility Features</a> (October 2006).
+      </li>
+      <li>Jon Gooday (AbilityNet): 
+        <a href="http://www.ictknowledgebase.org.uk/linuxaccessibility">Accessibility 
+        on Linux desktops</a> (May 2007).<br />
+        <strong>Note</strong>: for more up-to-date information about Linux, see the page
+        <a href="LinuxAccessibilityResources.html">Linux Accessibility Resources</a>.
+      </li>
+    </ul>
 
   </div><!-- end #main -->
 
