--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -21,14 +21,19 @@
         <a href="https://www.youtube.com/watch?v=dtFroEJN1nI">Human Computation</a>,
         Google Tech Talk, 2006 (on YouTube). 
       </li>
-      <li><a href="https://en.wikipedia.org/wiki/Crowdsourcing">Crowdsourcing</a> on Wikipedia</li>
-      <li><a href="https://en.wikipedia.org/wiki/Human-based_computation">Human-based computation</a> on Wikipedia</li>
+      <li><a href="https://en.wikipedia.org/wiki/Crowdsourcing">Crowdsourcing</a> 
+        on Wikipedia.
+      </li>
+      <li><a href="https://en.wikipedia.org/wiki/Human-based_computation">Human-based computation</a> 
+        on Wikipedia.
+      </li>
     </ul>
 
     <h2>Research and Papers</h2>
     <ul>
       <li>von Ahn, Luis; Ginosar, Shiry; Kedia, Mihir; Blum, Manuel (2006): 
-        &ldquo;<a href="http://www.cs.cmu.edu/%7Ebiglou/Phetch.pdf">Improving Accessibility of the Web with a Computer Game (<abbr>PDF</abbr>)</a>&rdquo;, 
+        &ldquo;<a href="http://www.cs.cmu.edu/%7Ebiglou/Phetch.pdf">Improving 
+        Accessibility of the Web with a Computer Game (<abbr>PDF</abbr>)</a>&rdquo;, 
         <abbr title="Association for Computing Machinery">ACM</abbr> <abbr>CHI</abbr> Notes 2006.
         <br />Note: access to 
         <a href="https://en.wikipedia.org/wiki/Phetch">Phetch</a>, 
@@ -37,8 +42,76 @@
     </ul>
 
     <h2>Pojects and Tools</h2>
+    <h3>Projects</h3>
     <ul>
       <li><a href="http://www.fixtheweb.net/">Fix the Web</a> (<abbr>UK</abbr>).
+      </li>
+    </ul>
+
+    <h3>User Scripts</h3>
+    <p>The following initiatives do not focus (or focus exclusively) 
+      on accessibility but have the potential to make sites more accessible.
+    </p>
+    <ul>
+      <li>
+        <strong><a href="http://webinsight.cs.washington.edu/projects/accessmonkey/">Accessmonkey</a></strong>.
+        <!-- @@add description -->
+      </li>
+      <li>
+        <strong><a href="https://en.wikipedia.org/wiki/Greasemonkey">GreaseMonkey</a></strong>
+        started as a browser extension for Firefox and a database of scripts.
+        The scripts are bits of JavaScript that customise the way a webpage 
+        behaves or displays.
+        They are created by volunteers, who upload them to a scripts database.
+        Users can search the website or database and load scripts into the extension.
+        The Greasemonkey extension also allows you to write your own scripts.
+        (Forks and similar initiatives are listed further below.)
+        If you want to learn more about Greasemonkey or start using it,
+        the following websites are relevant:
+        <ul>
+          <li>
+            <a href="http://www.greasespot.net/">www.greasespot.net</a>: 
+            the project's homepage.
+          </li>
+          <li>
+            The <a href="http://wiki.greasespot.net/">Greasespot wiki</a>
+            explains how you can write scripts.
+          </li>
+          <li>
+            The <a href="http://wiki.greasespot.net/User_Script_Hosting">wiki page
+            User Script Hosting</a> explains where you can find scripts.
+          </li>
+          <li>
+            User scripts are also available on the following sites:
+            <a href="http://userscripts-mirror.org/">userscripts-mirror.org</a>,
+            <a href="https://openuserjs.org/">openuserjs.org</a>,<!-- @@check upper/lowercase -->
+            <a href="https://greasyfork.org/en">greasyfork.org/en</a>.
+          </li>
+          <li>
+            The page
+            <a href="http://commons.oreilly.com/wiki/index.php/Greasemonkey_Hacks/Accessibility">Greasemonkey
+            Hacks: Accessibility</a>.<!-- @@add description -->
+          </li>
+          <!-- https://www.youtube.com/watch?v=4Po1JlRIEGY -->
+        </ul>
+      </li>
+      <li><a href="https://en.wikipedia.org/wiki/Scriptish">Scriptish</a> is or
+        was a fork of Greasemonkey. The project's code is available on
+        <a href="https://github.com/scriptish/scriptish/" 
+        title="Scriptish repository on GitHub">GitHub</a>.
+        Note: the domain <code>scriptish.org</code> has expired.
+      </li>
+      <li>
+        <a href="http://snipmatch.com/">SnipMatch</a> is
+        a <q>search-based code repository</q>.<!-- @@source? -->
+        See also its <a href="http://snipmatch.com/privacy">Privacy</a> page.
+      </li>
+      <li>
+        <a href="https://github.com/ShiftSpace/shiftspace"
+        title="ShiftSpace repository on GitHub">ShiftSpace</a>
+        was an 
+        <q>open source metaweb or web annotation application and framework</q>
+        that was abandoned in 2011.
       </li>
     </ul>
 
