+ W3C ATAG, UAAG; + RGAA

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -50,7 +50,30 @@
           </li>
         </ul>
       </li>
-      <!-- @@todo add ATAG, UAAG and WAI-ARIA -->
+      <li><abbr>W3C</abbr>:
+        <a href="http://www.w3.org/TR/ATAG20/">Authoring Tool Accessibility 
+        Guidelines (<abbr>ATAG</abbr>) 2.0</a>:
+        guidelines for tools that produce web content, such as 
+        <abbr title="what you see is what you get">WYSIWYG</abbr> <abbr>HTML</abbr>
+        editors, web content management systems, software for creating mobile
+        web applications, and tools convert or export to web content.
+        The guidelines are divided into two parts: Part A covers guidelines for
+        the user interface of authoring tools, while Part B covers guidelines 
+        for the content produced with such tools.
+      </li>
+      <li><abbr>W3C</abbr>:
+        <a href="http://www.w3.org/TR/UAAG20/">User Agent Accessibility Guidelines 
+        (<abbr>UAAG</abbr>) 2.0</a>:
+        guidelines for web browsers and similar applications (including media 
+        players and browser extensions) that render web content.
+      </li>
+      <!-- @@todo add WAI-ARIA -->
+      <li>
+        <a href="http://references.modernisation.gouv.fr/rgaa-3-0" 
+        lang="fr">Référentiel Général d'Accessibilité pour les Administrations 
+        (<abbr>RGAA</abbr>)</a>: version 3 of the accessibility guidelines
+        for public authorities in France.
+      </li>
       <li>United Nations: 
         <a href="http://www.un.org/webaccessibility/index.shtml">
         Accessibility Guidelines for United Nations Websites</a>.
