--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -66,8 +66,31 @@
         (<abbr>UAAG</abbr>) 2.0</a>:
         guidelines for web browsers and similar applications (including media 
         players and browser extensions) that render web content.
+      </li>                     
+      <li><abbr>W3C</abbr>:
+        <a href="http://www.w3.org/TR/wai-aria/">Accessible Rich Internet 
+        Applications (<abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr>) 
+        1.0</a>:
+        specification of an ontology of roles, states and properties that can be
+        used to improve the accessibility of web applications.<br />
+        This document is part of a suite of documents. The best starting point
+        is the <a href="http://www.w3.org/WAI/intro/aria.php"><abbr>WAI-ARIA</abbr>
+        Overview</a>.
+        For developers of web applications or widgets, the following documents
+        are especially important:
+        <ul>
+          <li>
+            <a href="http://www.w3.org/TR/wai-aria-primer/"><abbr>WAI-ARIA</abbr> 
+            1.0 Primer: An introduction to rich Internet application accessibility 
+            challenges and solutions</a>.
+          </li>
+          <li>
+            <a href="http://www.w3.org/TR/wai-aria-practices/"><abbr>WAI-ARIA</abbr> 
+            1.0 Authoring Practices: An author's guide to understanding and implementing 
+            Accessible Rich Internet Applications</a>.
+          </li>
+        </ul>
       </li>
-      <!-- @@todo add WAI-ARIA -->
       <li>
         <a href="http://references.modernisation.gouv.fr/rgaa-3-0" 
         lang="fr">Référentiel Général d'Accessibilité pour les Administrations 
@@ -91,6 +114,7 @@
         <a href="https://www.youtube.com/watch?v=Eqc0vGf0aI0">Web
         Accessibility Fundamentals</a> (YouTube video with subtitles), 
         JavaScript Accessibility Summit 2013.
+      </li>
     </ul>
 
     <h2>Accessibility Help for Computer Users</h2>
