--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -104,9 +104,17 @@
       </li>
     </ul>
 
-    <!--h2>Office Documents</h2>
-    See e.g. ADOD
-    -->
+    <h2>Office Documents</h2>
+    <ul>
+      <li>
+        <strong>Accessible Digital Office Document (<abbr>ADOD</abbr>) Project</strong>:
+        This site has published guidelines for creating accessible documents
+        with various office suites: Microsoft Office, LibreOffice, 
+        Google Docs, etcetera. 
+        The guidelines also explain how to create accessible templates.
+      </li>
+    </ul>
+
 
     <h2>Introductions to Accessibility</h2>
     <ul>
