ADOD: more details.

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -109,9 +109,13 @@
       <li>
         <strong>Accessible Digital Office Document (<abbr>ADOD</abbr>) Project</strong>:
         This site has published guidelines for creating accessible documents
-        with various office suites: Microsoft Office, LibreOffice, 
+        with various office suites: Microsoft Office (versions 2003 to 2013), 
+        LibreOffice and Apache OpenOffice (especially Writer), 
         Google Docs, etcetera. 
-        The guidelines also explain how to create accessible templates.
+        The guidelines also explain how to create accessible templates and
+        how to export documents to &ldquo;tagged&rdquo; <abbr>PDF</abbr>.
+        For some of these documents, French and Dutch translations are also
+        available.
       </li>
     </ul>
 
