List of Linux distros with Mate.

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -66,10 +66,30 @@
         more recently, MATE.
         Some consider MATE the best choice for users with serious visual impairments (including blindness).
         (However, GNOME 3 has a better magnifier and a black-on-white contrast theme.)
+        <br />
         <a href="http://www.linuxmint.com/">Linux Mint</a> includes 
         <a href="http://blog.linuxmint.com/?p=2713">MATE as one of its default desktop environments</a>.
         Fedora also has a 
         <a href="https://spins.fedoraproject.org/mate-compiz/">MATE Compiz spin</a>.
+        Other distributions that offer a Mate desktop are
+        <a href="http://www.pclinuxos.com/get-pclinuxos/">PCLinuxOS</a> (which
+        aims to ease the transition from Microsoft Windows to Linux),
+        <!-- PCLinux OS in Dutch: http://www.pclinuxos.nl/ -->
+        <a href="https://ubuntu-mate.org/">Ubuntu Mate</a>,
+        <a href="https://www.archlinux.org/">Arch Linux</a>
+        (see its 
+        <a href="https://wiki.archlinux.org/index.php/Desktop_environment">wikipage
+        about desktop environments</a>),
+        <a href="https://www.debian.org/">Debian</a>
+        (you need to select the desktop you want during the installation process),
+        <a href="http://mageia.org/">Mageia</a>
+        (you need to select <a href="https://wiki.mageia.org/en/Mageia_5_Release_Notes#Mate">Mate</a>
+        during the installation process),
+        <a href="https://www.gentoo.org/">Gentoo</a>
+        (see the <a href="https://wiki.gentoo.org/wiki/MATE">Gentoo page about Mate</a>)
+        and
+        <a href="https://www.opensuse.org/en/">OpenSUSE</a>
+        (see the <a href="https://doc.opensuse.org/release-notes/x86_64/openSUSE/13.2/#idm139856738618352">release notes</a>).
       </li>
     </ul>
 
