+ EIII User Testing Tool (accessiblecheck.com)

--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -45,6 +45,19 @@
     <h3>Projects</h3>
     <ul>
       <li><a href="http://www.fixtheweb.net/">Fix the Web</a> (<abbr>UK</abbr>).
+        <br />Fix the Web is a British initiative that relies on crowdsourcing
+        for both reporting and fixing accessibility issues on websites.
+        (Due to a redesign, registration as a volunteer is currently not possible.)
+      </li>
+      <li>The <a href="https://www.accessiblecheck.com/"><abbr 
+        title="European Internet Inclusion Initiative">EIII</abbr>
+        User Testing Tool</a> is a bookmarklet that you can install in any
+        JavaScript-enabled browsers in order to report accessibility issues
+        that cannot be reliably detected through automated testing only.
+        <br />
+        The bookmarklet was developed during the European project
+        <a href="http://www.eiii.eu/">European Internet Inclusion Initiative
+        (<abbr>EIII</abbr>)</a>. 
       </li>
     </ul>
 
