--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -117,6 +117,11 @@
 
     <h2>Articles and Blogposts</h2>
     <ul>
+      <li>Erin Hawley:
+        &ldquo;<a 
+        href="http://www.freelanceknight.com/accessibility-in-game-design-guest-post-by-erin-hawley/">Accessibility
+        in Game Design</a>&rdquo;, Freelance Knight, 10 August 2015.
+      </li>
       <li>Anastasia Salter:
         &ldquo;<a href="http://chronicle.com/blogs/profhacker/making-accessible-games-with-twine-audio/60143">
         Making Accessible Games with Twine Audio</a>&rdquo;, ProfHacker, 19 May 2015.
