+ European Internet Inclusion Initiative (EIII)

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
         <abbr class="assistive technology">AT</abbr>.
       </li>
     </ul>
+    <p>
+      The website of the European project 
+      European Internet Inclusion Initiative <abbr>EIII</abbr> (2013-2015)
+      also has a <a href="http://www.eiii.eu/resources/">resouces page</a>.
+      However, more importantly, the 
+      <strong>search form</strong> helps you find accessibility-related
+      resources on the Web.
+      <!-- Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
+    </p>
 
   </div><!-- end #main -->
 
