CMS Accessibility Whitepaper BrailleNet

--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -43,6 +43,17 @@
       (The articles below are listed in reverse chronological order.)
     </p>
     <ul>
+      <li>BrailleNet:
+        <a lang="fr"
+        href="http://inova.snv.jussieu.fr/evenements/colloques/colloques/index.php?c=87">Choisir 
+        et utiliser un <abbr>CMS</abbr> pour créer des contenus accessibles</a>.
+        In June 2015, <a href="http://www.braillenet.org/">BrailleNet</a> 
+        in France organised a workshop with (mostly French)
+        web developers and accessibility experts to discuss and compare the 
+        accessibility of <abbr>CMS</abbr> systems. 
+        This led to a whitepaper (45 pages) with the same title that can be
+        freely downloaded from the workhshop's webpage.
+      </li>
       <li>John Siebert:
         <a href="http://www.webaxe.org/about-cms-accessibility/">About <abbr>CMS</abbr> Accessibility</a>,
         Web Axe, 2 September 2011. <br />
