Alpine Linux wiht MATE

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -74,7 +74,9 @@
         Other distributions that offer a Mate desktop are
         <a href="http://www.pclinuxos.com/get-pclinuxos/">PCLinuxOS</a> (which
         aims to ease the transition from Microsoft Windows to Linux),
-        <!-- PCLinux OS in Dutch: http://www.pclinuxos.nl/ -->
+        <!-- PCLinux OS in Dutch: http://www.pclinuxos.nl/
+          with MATE: http://www.pclinuxos.com/get-pclinuxos/mate/ requires at least 512 MB RAM (1 GB recommended).
+        -->
         <a href="https://ubuntu-mate.org/">Ubuntu Mate</a>,
         <a href="https://www.archlinux.org/">Arch Linux</a>
         (see its 
@@ -90,6 +92,11 @@
         and
         <a href="https://www.opensuse.org/en/">OpenSUSE</a>
         (see the <a href="https://doc.opensuse.org/release-notes/x86_64/openSUSE/13.2/#idm139856738618352">release notes</a>).
+        For a 
+        <a href="https://en.wikipedia.org/wiki/Lightweight_Linux_distribution">lightweight Linux distribution</a>
+        that offers MATE, see
+        <a href="http://alpinelinux.org/">Alpine Linux</a>
+        (<a href="http://wiki.alpinelinux.org/wiki/MATE">installation instructions for MATE</a>). 
       </li>
     </ul>
 
