Game-Accessibility.com + new articles.
Added Game-Accessibility.com and articles by Nathan Lovato and Richard
Moss.

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -113,6 +113,15 @@
         <br />See also the websites's 
         <a href="http://www.audiogames.net/frequently-asked-questions/">Frequently Asked Questions</a>.
       </li>
+      <li>
+        <a href="http://game-accessibility.com/about/">Game Accessibility</a>
+        is a website that wants to address the problem of a lack of knowledge
+        about game accessibility
+        <q cite="http://game-accessibility.com/about/">by [&hellip;]
+        informing disabled gamers about the availability of accessible games and 
+        by providing resources for developers, publishers and researchers 
+        in order to stimulate accessibility in games.</q>
+      </li>
     </ul>
 
     <h2>Articles and Blogposts</h2>
@@ -121,6 +130,13 @@
         &ldquo;<a 
         href="http://www.freelanceknight.com/accessibility-in-game-design-guest-post-by-erin-hawley/">Accessibility
         in Game Design</a>&rdquo;, Freelance Knight, 10 August 2015.
+      </li>
+      <li>Nathan Lovato:
+        &ldquo;<a 
+        href="http://blog.gameanalytics.com/blog/how-to-expand-your-audience-with-game-accessibility.html">How
+        to expand your audience with Game Accessibility</a>, GameAnalytics,
+        4 June 2015.
+      </li>
       </li>
       <li>Anastasia Salter:
         &ldquo;<a href="http://chronicle.com/blogs/profhacker/making-accessible-games-with-twine-audio/60143">
@@ -145,6 +161,21 @@
         href="http://www.polygon.com/2015/2/10/8012451/games-have-basic-huge-accessibility-problems-that-we-celebrate">Games
         have basic, huge accessibility problems (that we celebrate)</a>", 10
         February 2015.
+      </li>
+      <li>
+        Richard Moss: 
+        <a href="http://www.polygon.com/features/2014/8/6/5886035/disabled-gamers-accessibility">Why
+        Game Accessibility Matters</a>, Polygon.com, 6 August 2014.
+      </li>
+      <li>
+        <a href="http://www.zenspath.com/home/2013/8/26/the-gamepad-helped-my-daughter-play-her-first-game-and-shes.html">The 
+        GamePad Helped My Daughter Play Her First Game (and She's Almost Blind)</a>,
+        Zenspath, 26 August 2013.
+      </li>
+      <li>
+        Richard Moss: 
+        <a href="http://www.polygon.com/features/2013/8/6/4550490/blind-games-rock-vibe">Blind
+        Games: The Next Battleground in Accessibility</a>, Polygon.com, 6 August 2013.
       </li>
     </ul>
 
