Ian Hamiton's blog.

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -126,6 +126,9 @@
 
     <h2>Articles and Blogposts</h2>
     <ul>
+      <li><a href="http://ian-hamilton.com/blog/">Ian Hamilton's blog</a>
+        is mostly about game accessibility.
+      </li>
       <li>Erin Hawley:
         &ldquo;<a 
         href="http://www.freelanceknight.com/accessibility-in-game-design-guest-post-by-erin-hawley/">Accessibility
