WebAIM discussion Oct 2015.

--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -37,10 +37,14 @@
     </p>
 
     <h2>Comparisons and Other Articles</h2>
-    <p>There seem to be no recent comparisons of the accessibility features in
-      content management systems. The comparisons below are outdated;
+    <p>There are very few recent comparisons of the accessibility features in
+      content management systems. Most of the comparisons below are outdated;
       they only show which systems took accessibility into account in the previous decade.
-      (The articles below are listed in reverse chronological order.)
+      The topic of <abbr>CMS</abbr> accessibility is sometimes also raised on 
+      accessibility mailing lists, e.g. 
+      <a href="http://webaim.org/discussion/mail_thread?thread=7179">on the
+      Web<abbr>AIM</abbr> mailing list in October 2015</a>.
+      (The articles and resources below are listed in reverse chronological order.)
     </p>
     <ul>
       <li>BrailleNet:
