Several YouTube videos added.

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -15,6 +15,7 @@
   </div><!-- end #header -->
 
   <div id="main">
+    <!-- @@todo check https://www.youtube.com/results?search_query=xcode+accessibility  -->
     <h2>General Resources</h2>
     <h3>Guidelines</h3>
     <ul>
@@ -72,6 +73,24 @@
         AbilityLab Mobile Accessibility Checker</a>:
         description of a commercial product that supports the
         development of accessible apps.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=G7Ju4I5J8kY">Building and Testing Accessible Apps</a>: 
+        recording of a AbilityNet webinar organised on 30 September 2014 
+        (YouTube, 45 minutes; closed captions are available).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=rg9Rn3fidGc">Use the Accessibility Inspector in XCode and iOS simulator</a>:
+        a short video by Ted Drake (YouTube, 80 seconds, no speech).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=jMnWwz6ZFwU">Accessibility testing with Android Studiow</a>:
+        a short video by Ted Drake (YouTube, 100 seconds; closed captions are available).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=Flo7aif5zHY">Mobile Accessibility at Twitter</a>:
+        hour-long video where Sommer Panage explains Twitter accessibility for Android
+        (27 May 2014; YouTube; no captions). 
       </li>
     </ul>
 
