New section: Developing Browser Extensions

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -305,6 +305,26 @@
       </li>
     </ul>
 
+    <h2>Developing Browser Extensions</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=6dfrfRl6il8">Google Chrome Extensions and Accessibility</a>
+        is a short video by Rachel Shearer (from Google's accessibility team) 
+        discusses accessibility best practices for extension developers.
+        In the first part, she describes the 
+        <a href="https://chrome.google.com/webstore/detail/chromevis-by-google/halnfobaneppemjnonmmhngbfifnafgd">ChromeVis extension</a> 
+        (for people with low vision).
+        In the second part, she explains how she used the WebKit selection <abbr>API</abbr> 
+        and what kinds of additional work was needed for features such as 
+        keyboard navigation, text size options and colour options.
+        The <a href="http://code.google.com/p/google-axs-chrome/source/browse/#svn%2Ftrunk%2Fchromevis">source code for Chromevis</a>
+        has been archived on code.google.com.
+        See also the 
+        <a href="https://developer.chrome.com/extensions/accessibilityFeatures">chrome.accessibilityFeatures <abbr>API</abbr></a>
+        that was introduced in Google Chrome 37 (but which only works on Chrome <abbr>OS</abbr>). 
+      </li>
+    </ul>
+
     <h2>Browser Extensions for End Users</h2>
     <ul>
       <li><a href="http://chronic-illness-support.tumblr.com/post/121510449113/chrome-extensions-for-disabilities-masterpost">chrome extensions for disabilities masterpost</a>
